# BACode

./: README.md
C++/: IDE_log.txt
C++/CP2/CMakeProject1/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeProject1.cpp
C++/ChessAI/ChessAI/: CMakeLists.txt  OP.cpp  OP.h  main.cpp
C++/ChessAI/ChessAI/Opening/: Opening.py
C++/ChessAI/lib/chessAI/: ChessGame.cpp  OnLineOP.cpp  OnLineOP.h
C++/ChessAI/src/: CMakeLists.txt  main.cpp
C++/Communication_test/CommunicationTest/: .gitignore  CMakeLists.txt  CommunicationTest.cpp  CommunicationTest.h  main.cpp
C++/New folder/: Opening.cpp  Opening.h  main.cpp
C++/Send/: CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  main.cpp
C++/chessAI/: .gitignore
C++/chessAI/lib/chessAI/: CMakeLists.txt  ChessAI.cpp  ChessGame.cpp  OnLineOP.cpp
C++/chessAI/lib/thc/src/: Move.cpp
C++/chessAI/src/: main.cpp
Java/CommunicationTest/: .gitignore  pom.xml
Java/CommunicationTest/src/main/java/bif/communicationtest/: Main.java
Python/: Makefile  Op.py  Op1.py  Opening.py  service.py  test.ipynb
Test Results/: API_log.txt
