cmake_minimum_required(VERSION 3.20)
project(OnLineopening)

set(CMAKE_CXX_STANDARD 14)
include_directories(C:\\Users\\tpztp\\AppData\\Local\\Programs\\Python\\Python38\\include)
link_libraries(C:/Users/tpztp/AppData/Local/Programs/Python/Python38/libs/python38.lib)

add_executable(OnLineopening main.cpp OP.cpp OP.h)
